# test

./: .gitignore  .gitmodules  README.md
algorithm/numbers/: big_num_add.cc
bash/: hello.sh  special_var.sh  string.sh
c/: CMakeLists.txt  _clang-format
c/c99/: CMakeLists.txt  btest.c  vla.c
c/cmockery/: CMakeLists.txt  assert.c  assert_macro.c  cmockery.c  expect_assert_failure.c  mock_assert.c  mock_func.c  mock_func_param.c  overview.c  setup_teardown.c
c/lang/: CMakeLists.txt  comma_in_while.c  count_1.c  hello_c.c  ntoc.c  overview.c  sizeof.c  switch.c  va_arg.c
c/lang/static_var_in_h/: lib.c  lib.h  main.c
c/libcurl/: CMakeLists.txt  get_req.c  parse_resp.c  post_req.c
c/libev/: CMakeLists.txt  echo_server.c  tutor.c
c/libevent/: CMakeLists.txt  echo_server.c  evhttp.c  globals.c  signal.c  sock.c  timer.c  tutor.c
c/mylibc/: strcat.c  strcmp.c
c/mymath/: CMakeLists.txt  math.c  math.h
c/network/: CMakeLists.txt  addr_api.c  echo_server_block.c  echo_server_epoll.c  echo_server_poll.c  echo_server_select.c  endianness.c  get_remote_addr_by_getpeername.c  netinfo_api.c  signal_as_event.c  sock_api.c  timer_as_event.c
c/src/: mycopy.c  myls.c  myshell.c  overview.c  print-pid.cc  strcat.c  strcmp.c  strlen.c
c/src/bin_search/: find_k.c
c/src/c99/: CMakeLists.txt  vla.c  vlna.c
c/src/lang/: overview.c
c/src/libev/: echo_server.c
c/src/mylibc/: strcpy.c
c/src/network/: CMakeLists.txt  addr_api.c  echo_server.c  echo_server.epoll.c  echo_server_block.c  echo_server_poll.c  echo_server_select.c  endianness.c  get_remote_addr_by_accept.c  get_remote_addr_by_getpeername.c  sock_api.c
c/src/sort/: quich_sort.c  quick_sort.cpp
c/src/system/: echo.c  myshell.c
c/std-lib/: CMakeLists.txt  perror.c
c/system/: CMakeLists.txt  all_events.c  as_events.c  atfork.c  echo.c  fork-test.c  myshell.c  signal.c  timer.c
c/thpool/: CMakeLists.txt  test.c
c/thread/: CMakeLists.txt  atfork_test.c  barrier.c  barrier_test.cpp  cond.c  cond_test.c  main_thread_canceled.c  main_thread_dead.c  main_thread_exit.c  mutex.c  rwlock.c  rwlock_test.cpp  thread.c  thread_cleanup.c  thread_create.c  thread_mem_layout.c  thread_race.c  thread_test.c
c/zlog/: CMakeLists.txt  dzlog.c  level.c  zlog.conf
cmake/: CMakeLists.txt  foreach.cmake  script.cmake  unquoted_argument.cmake
cmake/cmake_dir/: CMakeLists.txt
cmake/cmake_dir/project/: CMakeLists.txt
cmake/cmake_dir/project/src/: CMakeLists.txt
cmake/cmake_dir/project/src/main/: CMakeLists.txt  main.cpp
cmake/cmake_dir/project/src/module_1/: CMakeLists.txt  person.hpp
cmake/cmake_dir/project/test/: CMakeLists.txt
cmake/cmake_dir/src/: CMakeLists.txt
cmake/cmake_dir/src/hello/: CMakeLists.txt  hello.cpp
cmake/cmake_dir/src/hello/include/hello/: hello.h
cmake/cmake_dir/src/person/: CMakeLists.txt  person.cpp
cmake/cmake_dir/src/test/: CMakeLists.txt  main.cpp  test.cpp
cmake/src/hello/: hello.cpp
cpp/: CMakeLists.txt  _clang-format  hello  hello.cpp
cpp/lang/: CMakeLists.txt  clang-format-test.cpp  const-implement.c  const-in-unmatched-type.c  extern_test.cpp  fstream.cpp  io_test.cpp  overview.cpp  safe_singeton.cpp  smartptr.cpp  string.cpp  typedef.cpp  vartype.cpp
cpp/src/: CMakeLists.txt
cpp/src/lang/: extern_var.cpp  var_test.cpp
cpp/src/lang_test/: CMakeLists.txt  buildin_test.cpp  buildin_type_test.cpp  class_test.cpp  const_test.cpp  const_var.hpp  control_test.cpp  extern_var.hpp  io_test.cpp  lang_test.cpp  lang_test.hpp  number_test.cpp  overview.cpp  tmp_test.cpp  var_test.cpp
cpp/src/log4cplus/: main.cpp
cpp/src/test/: CMakeLists.txt  test.cpp
cpp/src/thread/: atfork_test.cpp  main_thread_dead.cpp  mutex_test.cpp  rwlock_test.cpp  thread_cleanup.cpp  thread_race.cpp
cpp/src/thread_test/: CMakeLists.txt  atfork_test.cpp  barrier_test.cpp  cond_test.cpp  main-thread-dead.cpp  mutex_test.cpp  thread_cleanup.cpp  thread_mem_layout.cpp  thread_race.cpp  thread_test.cpp
crontab/: show_env_vars.sh
disign-pattern/src/: CMakeLists.txt
django/mysite/: db.sqlite3
docker/: docker-compose.yml
docker/guide/: Dockerfile  docker-compose.yml
docker/network/: Dockerfile  docker-compose.yml  main.py
docker/static_web/: Dockerfile
docker/test/: Dockerfile  docker-compose.yml
dot/: test.dot
elk/: filebeat.yml  first-pipeline.conf
falcon/: falcon.lua  falcon.nginx.conf  falcon.py  falcon_ngx.lua  test_falcon.lua  test_falcon.py
flask/: hello.py
go/test/: .dir-locals.el  build.sh
golang/: build.sh  channel_test.go  context_test.go  deepcopy_test.go  env.sh  fmt_test.go  go.mod  go.sum  main_test.go  map_test.go  rand_test.go  reflect_test.go  select_test.go  slice_test.go  struct_test.go  test.go  testing_test.go  time_test.go  waitgroup_test.go
golang/context/: context_test.go
golang/decimal/: main.go
golang/gocheck/: hello_test.go
golang/http/: server_test.go
golang/json/: main.go
golang/lang/: channel_test.go  fmt_test.go  map_test.go  select_test.go  slice_test.go  struct_test.go  switch_test.go  waitgroup_test.go
golang/log/: log_test.go  main.go
golang/logrus/: mylog.go
golang/math/: rand.go  rand_test.go
golang/mylib/: mylib.go  mylib_test.go
golang/pretty/: pretty_test.go
golang/ristretto/: basic_test.go
gtest/: CMakeLists.txt  main.cpp  my_math.cpp
html/: test.html
json/: test.json
lua/: called_by_c.c  example-code.lua  string_lib.lua  test.lua  test_serpent.lua  utils.lua
make/: Makefile
markdown/: hello.md  test.md
nginx/: hosts  test.nginx.conf
org/: test.org
plantuml/: seq.plantuml
protobuf/: _clang-format  addressbook.2.proto  addressbook.proto  person.proto  read_person_info.cpp  test.py
python/: Pipfile  log.py  tcp_cli.py  tcp_srv.py  test.py  test_example.py  test_subprocess.py  udp_cli.py  udp_srv.py
redis/: master-6380.conf  redis-6380.conf  redis-6381.conf  sentinel-26380.conf  sentinel-26381.conf  sentinel-26382.conf  sentinel-master-26380.conf  slave-6381.conf  slave-6382.conf
ruby/: test.rb
scrapy/: Pipfile  selenium.py  simple-spider.py
yaml/: parse.py  test.yml
(+112 files in other folders)
